--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: pserv
     name: clickhouse
     env: docker
-    plan: standard
+    plan: free
     disk:
       name: data
       mountPath: /var/lib/clickhouse
